--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 model/venv/Lib/site-packages/clang/native/libclang.dll filter=lfs diff=lfs merge=lfs -text
 model/venv/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.lib filter=lfs diff=lfs merge=lfs -text
 model/venv/Lib/site-packages/tensorflow/python/_pywrap_tensorflow_internal.pyd filter=lfs diff=lfs merge=lfs -text
+*.pyd filter=lfs diff=lfs merge=lfs -text
+*.dll filter=lfs diff=lfs merge=lfs -text
+*.lib filter=lfs diff=lfs merge=lfs -text
